k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: english-jatel
  labels:
    app: english-jatel
