k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: english-jatel-ingress
  namespace: english-jatel
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - learn.jfs-devops.shop
      secretName: english-jatel-tls
  rules:
    - host: learn.jfs-devops.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: english-jatel
                port:
                  number: 80
